sassi-macros/tests/lihaaf/compile_fail/jsahibon_string_ordering.stderr
error[E0599]: the method `gt` exists for struct `JSahibONValueRef<Event, std::string::String>`, but its trait bounds were not satisfied
   --> $DIR/jsahibon_string_ordering.rs:15:10
    |
 11 |       let _ = Event::fields()
    |  _____________-
 12 | |         .payload
 13 | |         .jsahibon()
 14 | |         .value::<String>()
 15 | |         .gt("Ada".to_owned());
    | |         -^^ method cannot be called on `JSahibONValueRef<Event, std::string::String>` due to unsatisfied trait bounds
    | |_________|
    |
    |
   ::: $RUST/lib/rustlib/src/rust/library/alloc/src/string.rs:353:1
    |
353 |   pub struct String {
    |   ----------------- doesn't satisfy `std::string::String: JOrderedScalar`
    |
   ::: sassi/src/predicate/jsahibon.rs:498:1
    |
498 |   pub struct JSahibONValueRef<T, V> {
    |   --------------------------------- doesn't satisfy `_: Iterator`
    |
    = note: the following trait bounds were not satisfied:
            `std::string::String: JOrderedScalar`
            `JSahibONValueRef<Event, std::string::String>: Iterator`
            which is required by `&mut JSahibONValueRef<Event, std::string::String>: Iterator`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
